--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"vscode-pets.throwBallWithMouse": true,
+	"vscode-pets.petSize": "large",
+	"vscode-pets.petType": "totoro",
+	"vscode-pets.theme": "castle",
+	"vscode-pets.position": "panel"
 }
